@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Image-Grab
-version:      1.4.1
+version:      1.4.2
 version_from: lib/Image/Grab.pm
 installdirs:  site
 requires:
